# brain-dead-island

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: basic_pipeline.yml
bdi_game/: Cargo.toml
bdi_game/examples/: direct_render.rs  grid_render.rs  howto.md  render.rs  texture_render.rs  textured_grid.rs  textured_square.rs
bdi_game/src/: lib.rs  main.rs
bdi_game/src/algorithms/search/: lower_boundable.rs  mod.rs  searchable.rs
bdi_game/src/algorithms/search/algorithms/: a_star_search.rs  heuristic_search.rs  mod.rs  naive_search.rs  naive_search_problem.rs  ongoing_search.rs
bdi_game/src/asset_manager/: asset_manager.rs  mod.rs
bdi_game/src/display/: actions.rs  camera.rs  game_display.rs  hexagon.rs  mod.rs  renderable.rs  rendering.rs  resource_manager.rs  sdl.rs  sdl_display.rs  structures.rs  traits.rs
bdi_game/src/display/displays/: mod.rs
bdi_game/src/display/renderable_objects/: grid_hexagon.rs  mod.rs
bdi_game/src/display/renderers/: mod.rs
bdi_game/src/game/: game.rs  logging.rs  mod.rs
bdi_game/src/render/: mod.rs  sdl.rs  structures.rs  traits.rs
bdi_game/src/renderer/: mod.rs  sdl.rs  structures.rs  traits.rs
bdi_game/src/simulation/: entity.rs  entity_actions_queue.rs  entity_state.rs  entity_state_machine.rs  entity_type.rs  grid.rs  mod.rs  simulation.rs  world_grid.rs  world_state.rs
bdi_game/src/terrain_manager/: map.rs  map_loader.rs  mod.rs  sampler.rs  world_object.rs
bdi_game/src/util/: vec2.rs
