[package]
name = "bdi_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", features = ["bundled", "gfx", "image"]}

log = "0.4"
simplelog = "0.12.2"

config = "0.14.0"
thiserror = "1.0.57"
image = "0.25.1"

serde = { version = "1.0", features = ["derive"]}
chrono = "0.4.37"
priority-queue = "2.0.0"
